--- a/source/dialogs/marker-properties/marker-properties-modal.html
+++ b/source/dialogs/marker-properties/marker-properties-modal.html
@@ -43,7 +43,7 @@
                             <div class="form-group">
                                 <label for="depth" class="control-label col-sm-4 normal-text">Depth</label>
                                 <div class="col-sm-8">
-                                    <input type="number" min="0" step="0.01" class="form-control wi-form-control" id="depth" ng-model="wiModal.depth">
+                                    <input type="number" step="1" class="form-control wi-form-control" id="depth" ng-model="wiModal.depth">
                                 </div>
                             </div>
                             <div class="form-group">
