add wi-container & fix wi-zone

--- a/source/html/index.html
+++ b/source/html/index.html
@@ -42,6 +42,7 @@
     <link href='css/wi-d3.css' rel='stylesheet'>
     <link href='css/wi-explorer.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/wi-zone.css">
+    <link rel="stylesheet" href="css/wi-container.css">
 
     <link href='css/graph.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
