--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -173,7 +173,7 @@
                         </div>
                     </wi-tab>
                     <wi-tab heading="Curve" enabled="wiModal.tabFlags[1]">
-                        <div ng-show="wiModal.tabFlags[1] == 'true'" class="container-fluid">
+                        <div ng-show="wiModal.tabFlags[1] == 'true'" class="container-fluid padding-top-2em padding-bottom-2em">
                             <form action="" class="form-horizontal">
                                 <div class="width-95-percent float-left">
                                     <table class="font-size-10px table table-bordered curveTable">
