--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -16,7 +16,7 @@
                                         <h5>Choose Depth</h5>
                                         <div class="col-sm-offset-1 col-sm-11 container-fluid">
                                             <div class="form-group">
-                                                <input class="col-sm-1" type="radio" name="depth" ng-model="wiModal.depthType" ng-change="wiModal.onDepthTypeChanged()" value="intervalDepth">
+                                                <input class="col-sm-1" type="radio" name="depth" ng-model="wiModal.depthType" ng-change="wiModal.onDepthTypeChanged()" value="intervalDepth">{{wiModal.depthType}}{{wiModal.histogramModel.properties.idZoneSet}}
                                                 <label><span>Interval Depths</span></label>
                                             </div>
                                             <div class='form-group'>
