--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -327,7 +327,7 @@
                                                 <td>
                                                     <input type="number" ng-model="shading.leftFixedValue" 
                                                             class="form-control wi-form-control" id="fixedVal" 
-                                                            ng-change="wiModal.onChangeShading($index);wiModal.setShadingName(null, shading._index, false); shading.idLeftLine = '-3'"
+                                                            ng-change="wiModal.onChangeShading($index);wiModal.setShadingName(null, shading._index, false); shading.idLeftLine = -3"
                                                             ng-disabled="!shading.idRightLine"
                                                             size="6">
                                                 </td>
