--- a/source/dialogs/authentication/authentication-modal.html
+++ b/source/dialogs/authentication/authentication-modal.html
@@ -22,7 +22,8 @@
                                         <input type="password" class="form-control" id="password" name="password" ng-model="wiModal.password" required>
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-default" ng-click="wiModal.onLoginButtonClicked()">Login</button>
+                                <hr>
+                                <button type="submit" class="btn btn-default float-right margin-bottom-1_5em" ng-click="wiModal.onLoginButtonClicked()">Login</button>
                             </form>
                         </div>
                     </wi-tab>
@@ -49,7 +50,8 @@
                                             required ng-blur="wiModal.checkPasswords()">
                                     </div>
                                 </div>
-                                <button type="submit" class="btn btn-default" ng-click="wiModal.onRegisterButtonClicked()">Register</button>
+                                <hr>
+                                <button type="submit" class="btn btn-default float-right margin-bottom-1_5em" ng-click="wiModal.onRegisterButtonClicked()">Register</button>
                             </form>
                         </div>
                     </wi-tab>
