--- a/source/html/index.html
+++ b/source/html/index.html
@@ -43,6 +43,7 @@
     <link href='css/wi-explorer.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/wi-zone.css">
     <link rel="stylesheet" href="css/wi-container.css">
+    <link rel="stylesheet" href="css/wi-user.css">
 
     <link href='css/graph.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
@@ -95,6 +96,7 @@
 
         <div id='myLayout'>
         </div>
+        <wi-user class="user-wrapper" name='user'></wi-user>
         <wi-context-menu name="ContextMenu"></wi-context-menu>
     </div>
 
